# system-f-inference

./: LICENSE  flake.nix  system-f-inference.cabal
src/IPF/: Ctx.hs  Expr.hs  Inference.hs  SubTyping.hs  Type.hs
test/: Main.hs
test/Tests/: IPF.hs
